--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,10 @@ settings.ini
 .vscode/
 CMakeSettings.json
 out/
+
+# Visual Studio files and folder
 .vs/
+**.sln
+**.vcxproj
+**.vcxproj.filters
+**.vcxproj.user
